--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ packages/System.Collections.4.3.0/ref/xamarinmac20/_._
 packages/System.Collections.4.3.0/ref/xamarintvos10/_._
 packages/System.Collections.4.3.0/ref/xamarinwatchos10/_._
 .vs/StudyConsoleApp/project-colors.json
+/ConsoleApp1/obj/Debug
