--- a/ConsoleApp1/StudyConsole.csproj
+++ b/ConsoleApp1/StudyConsole.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Solution.cs" />
     <Compile Include="Type\Algorithms\Binary Search.cs" />
     <Compile Include="Type\Algorithms\find-peak-element.cs" />
+    <Compile Include="Type\Algorithms\single-element-in-a-sorted-array.cs" />
     <Compile Include="Type\Algorithms\TwoSum.cs" />
     <Compile Include="Type\BST\Binary Inorder Traversal.cs" />
     <Compile Include="Type\Call FLow\CallFlow.cs" />
